css/style.css
/* ... */
.large-text {
	line-height: 1.2em;
	font-size: 30px;
	color: #181a1c;
	padding: 20px;
}
.triangle {
	fill: #164046;
	width: 100%;
	height: 30px;
	opacity: 0;
	transform: scaleY(0);
	transform-origin: top;
	transition: opacity 1s, transform 1s;
}
.triangle.fadeInDown {
	opacity: 1;
	transform: scaleY(1);
}
/*
2.1 Buttons
**********************************************************************/
.button {
	display: inline-block;
	margin-top: 2px;
	margin-bottom: 2px;
	border: 1px solid #164046;
	padding: 15px 30px;
	background-color: #164046;
	border-radius: 4px;
}
.button:hover,
.button:focus,
.button:active {
	background-color: #c5ff00;
	color: #164046;
}
.primary-section .button {
	border-color: #181a1c;
	color: #181a1c;
	background-color: #9ccc00;
}
.primary-section .button:hover,
.primary-section .button:focus,
.primary-section .button:active {
	border-color: #c5ff00;
	color: #c5ff00;
	background-color: unset;
}
/*
2.2 Thumbnails
**********************************************************************/
.row {
	--bs-gutter-x: 0.75rem;
}
.thumbnail {
	display: block;
	overflow: hidden;
	position: relative;
	padding: 4px;
	margin-bottom: 12px;
	text-align: center;
	background-color: #164046;
	border-radius: 4px;
}
.thumbnail img {
	width: 100%;
	/* "height: auto" in combination with inline width and height allows to keep aspect ratio while loading for non-bleeding edge browsers, which do not support "aspect-ratio" yet. */
	height: auto;
	aspect-ratio: 8/5;
	background-color: #ffffff;
}
.thumbnail img[src$=".svg"] {
	padding: 0 3%;
}
.thumbnail h3,
.thumbnail p {
	margin: 0;
	padding: 3px 0;
	white-space: nowrap;
	/* "position: relative" required to keep text in front of the mask element */
	position: relative;
}
.thumbnail h3 {
	font-size: 14px;
	margin-top: 5px;
}
.thumbnail:hover h3,
.thumbnail:focus h3,
.thumbnail:active h3 {
	color: #c5ff00;
}
.thumbnail p {
	font-size: 10px;
}
.thumbnail::after {
	width: 40px;
	height: 100%;
	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'><path fill='none' stroke='white' stroke-width='2' stroke-linecap='round' d='M5 1v8M1 5h8'/></svg>");
	position: absolute;
	top: -45px;
	left: calc(50% - 20px);
}
.thumbnail:hover::after,
.thumbnail:focus::after,
.thumbnail:active::after {
	transform: translateY(50%);
	transition: transform 0.3s ease-out;
}
.thumbnail::before {
	width: 100%;
	height: 100%;
	content: "";
	background-color: #181a1cd9;
	position: absolute;
	top: 100%;
	left: 0;
	transition: transform 0.2s ease-out;
}
.thumbnail:hover::before,
.thumbnail:focus::before,
.thumbnail:active::before {
	transform: translateY(-100%);
}
/*
2.3 Icons: Minified via: https://vecta.io/nano
**********************************************************************/
/* https://github.com/FortAwesome/Font-Awesome/blob/5.x/svgs/solid/download.svg */
.fa-download {
	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><path fill='white' d='M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z'/></svg>");
}
/* https://raw.githubusercontent.com/FortAwesome/Font-Awesome/5.x/svgs/solid/book.svg */
.fa-book {
	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'><path fill='white' d='M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z'/></svg>");
}
/* https://raw.githubusercontent.com/FortAwesome/Font-Awesome/5.x/svgs/solid/external-link-alt.svg */
/*.fa-external-link-alt {
	content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><path fill='white' d='M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0H360c-21.37 0-32.05 25.91-17 41l35.73 35.73L135 320.37a24 24 0 0 0 0 34L157.67 377a24 24 0 0 0 34 0l243.61-243.68L471 169c15 15 41 4.5 41-17V24a24 24 0 0 0-24-24z'/></svg>");
}*/
/*
3. Sections
***************************************************************************/
.section {
	padding-bottom: 50px;
}
.section .triangle {
	margin-bottom: 50px;
}
.section .title {
	text-align: center;
	padding: 10px;
	border-bottom: 1px solid #ffffff;
	margin-bottom: 30px;
}
.primary-section {
	background-color: #164046;
}
.primary-section .triangle {
	fill: #9ccc00;
}
.primary-section h3,
.primary-section .title p {
	color: #9ccc00;
}
.secondary-section {
	background-color: #9ccc00
}
.secondary-section .title {
	border-bottom-color: #181a1c;
}
.secondary-section h1,
.secondary-section h2,
.secondary-section .title p {
	color: #181a1c;
}
/*
3.1 Features
**********************************************************************/
.service svg {
	display: inline-block;
	margin-top: 30px;
	width: 131px;
	height: 131px;
	background-color: #000000;
	fill: #ffffff;
	border: 3px solid #ffffff;
	border-radius: 50%;
	transition: transform 0.25s;
}
.service > a:hover > svg,
.service > a:focus > svg,
.service > a:active > svg {
	transform: scale(1.1, 1.1);
	border-color: #c5ff00;
}
.service h3 {
	margin-top: 10px;
}
.service > a:hover > h3,
.service > a:focus > h3,
.service > a:active > h3 {
	color: #c5ff00;
}
.service p {
	padding: 0 10px;
}
/* ... */

